refactor: alterado banco de dados para sqlite
